Highlight rows and columns

--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -1,3 +1,26 @@
+#spacingTable
+  &:hover
+    color: $border
+    code
+      background: none
+      color: $border
+  .bd-current-row
+    background-color: $background
+    td:first-child,
+    .bd-current-column:not(:first-child)
+      background-color: $danger-light
+      color: $text-strong
+      code
+        background-color: $danger
+        color: $danger-invert
+  .bd-current-column
+    background-color: $background
+  .bd-current-value
+    background-color: $danger-light
+    code
+      background-color: $danger
+      color: $danger-invert
+
 +selection
   background-color: $primary
   color: $primary-invert
