--- a/docs/_includes/components/categories.html
+++ b/docs/_includes/components/categories.html
@@ -14,7 +14,7 @@
         <a class="bd-category-name {% if category_id == current_link_id %}is-active{% endif %}" href="{{ site.url }}{{ category_link.path }}">
           <strong>{{ category_link.name }}</strong>
           {% if category_link.name == 'Helpers' %}
-            <span class="tag bd-mini-tag is-danger">
+            <span class="tag bd-mini-tag is-primary">
               New!
             </span>
           {% endif %}
