Only highlight relevant cells

--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -6,13 +6,18 @@
       color: $border
   .bd-current-row
     background-color: $background
-    td:first-child,
-    .bd-current-column:not(:first-child)
+    &:first-child
       background-color: $danger-light
       color: $text-strong
       code
         background-color: $danger
         color: $danger-invert
+    &.bd-current-column
+      background-color: $primary-light
+      color: $text-strong
+      code
+        background-color: $primary
+        color: $primary-invert
   .bd-current-column
     background-color: $background
   .bd-current-value
