--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -13176,15 +13176,23 @@ svg {
   background-color: whitesmoke;
 }
 
-#spacingTable .bd-current-row td:first-child,
-#spacingTable .bd-current-row .bd-current-column:not(:first-child) {
+#spacingTable .bd-current-row:first-child {
   background-color: #feecf0;
   color: #363636;
 }
 
-#spacingTable .bd-current-row td:first-child code,
-#spacingTable .bd-current-row .bd-current-column:not(:first-child) code {
+#spacingTable .bd-current-row:first-child code {
   background-color: #f14668;
+  color: #fff;
+}
+
+#spacingTable .bd-current-row.bd-current-column {
+  background-color: #ebfffc;
+  color: #363636;
+}
+
+#spacingTable .bd-current-row.bd-current-column code {
+  background-color: #00d1b2;
   color: #fff;
 }
 
