Customizing spacing helpers output

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -13163,48 +13163,48 @@ svg {
   width: 1em;
 }
 
-#spacingTable:hover {
+.bd-spacing-table:hover {
   color: #dbdbdb;
 }
 
-#spacingTable:hover code {
+.bd-spacing-table:hover code {
   background: none;
   color: #dbdbdb;
 }
 
-#spacingTable .bd-current-row {
+.bd-spacing-table .bd-current-row {
   background-color: whitesmoke;
 }
 
-#spacingTable .bd-current-row:first-child {
+.bd-spacing-table .bd-current-row:first-child {
   background-color: #feecf0;
   color: #363636;
 }
 
-#spacingTable .bd-current-row:first-child code {
+.bd-spacing-table .bd-current-row:first-child code {
   background-color: #f14668;
   color: #fff;
 }
 
-#spacingTable .bd-current-row.bd-current-column {
+.bd-spacing-table .bd-current-row.bd-current-column {
   background-color: #ebfffc;
   color: #363636;
 }
 
-#spacingTable .bd-current-row.bd-current-column code {
+.bd-spacing-table .bd-current-row.bd-current-column code {
   background-color: #00d1b2;
   color: #fff;
 }
 
-#spacingTable .bd-current-column {
+.bd-spacing-table .bd-current-column {
   background-color: whitesmoke;
 }
 
-#spacingTable .bd-current-value {
+.bd-spacing-table .bd-current-value {
   background-color: #feecf0;
 }
 
-#spacingTable .bd-current-value code {
+.bd-spacing-table .bd-current-value code {
   background-color: #f14668;
   color: #fff;
 }
