Fix issue when there's only one is-toggle tag

--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -121,9 +121,11 @@ $tabs-toggle-link-active-color: $link-invert !default
       & + li
         margin-left: -#{$tabs-toggle-link-border-width}
       &:first-child a
-        border-radius: $tabs-toggle-link-radius 0 0 $tabs-toggle-link-radius
+        border-top-left-radius: $tabs-toggle-link-radius
+        border-bottom-left-radius: $tabs-toggle-link-radius
       &:last-child a
-        border-radius: 0 $tabs-toggle-link-radius $tabs-toggle-link-radius 0
+        border-bottom-right-radius: $tabs-toggle-link-radius
+        border-top-right-radius: $tabs-toggle-link-radius
       &.is-active
         a
           background-color: $tabs-toggle-link-active-background-color
