--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3829,6 +3829,11 @@ fieldset[disabled] .button {
   color: currentColor;
 }
 
+.table td.is-vcentered,
+.table th.is-vcentered {
+  vertical-align: middle;
+}
+
 .table th {
   color: #363636;
 }
@@ -8019,11 +8024,13 @@ label.panel-block:hover {
 }
 
 .tabs.is-toggle li:first-child a {
-  border-radius: 4px 0 0 4px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 .tabs.is-toggle li:last-child a {
-  border-radius: 0 4px 4px 0;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 .tabs.is-toggle li.is-active a {
@@ -14532,9 +14539,7 @@ svg {
 
 .bd-partner-sponsor.is-text {
   color: #7a7a7a;
-  font-size: 0.875em;
   line-height: 1.25;
-  min-height: 0;
 }
 
 .bd-partner-sponsor.is-text .bd-sponsor-item {
@@ -14550,6 +14555,7 @@ svg {
   position: relative;
 }
 
+.bd-sponsor-item strong,
 .bd-sponsor-item img {
   position: relative;
 }
