--- a/css/bulma-rtl.css
+++ b/css/bulma-rtl.css
@@ -4577,13 +4577,13 @@ fieldset[disabled] .radio {
 
 .select:not(.is-multiple):not(.is-loading)::after {
   border-color: #3273dc;
-  right: 1.125em;
+  left: 1.125em;
   z-index: 4;
 }
 
 .select.is-rounded select {
   border-radius: 290486px;
-  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .select select {
@@ -4604,7 +4604,7 @@ fieldset[disabled] .select select:hover {
 }
 
 .select select:not([multiple]) {
-  padding-right: 2.5em;
+  padding-left: 2.5em;
 }
 
 .select select[multiple] {
@@ -4808,7 +4808,7 @@ fieldset[disabled] .select select:hover {
 .select.is-loading::after {
   margin-top: 0;
   position: absolute;
-  right: 0.625em;
+  left: 0.625em;
   top: 0.625em;
   transform: none;
 }
@@ -7109,7 +7109,7 @@ body.has-navbar-fixed-bottom {
   height: 3.25rem;
   position: relative;
   width: 3.25rem;
-  margin-left: auto;
+  margin-right: auto;
 }
 
 .navbar-burger span {
@@ -7386,11 +7386,11 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   }
   .navbar-start {
     justify-content: flex-start;
-    margin-right: auto;
+    margin-left: auto;
   }
   .navbar-end {
     justify-content: flex-end;
-    margin-left: auto;
+    margin-right: auto;
   }
   .navbar-dropdown {
     background-color: white;
@@ -7442,11 +7442,11 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   }
   .navbar > .container .navbar-brand,
   .container > .navbar .navbar-brand {
-    margin-left: -.75rem;
+    margin-right: -0.75rem;
   }
   .navbar > .container .navbar-menu,
   .container > .navbar .navbar-menu {
-    margin-right: -.75rem;
+    margin-left: -0.75rem;
   }
   .navbar.is-fixed-bottom-desktop, .navbar.is-fixed-top-desktop {
     left: 0;
