--- a/css/bulma-rtl.css
+++ b/css/bulma-rtl.css
@@ -1,4 +1,4 @@
-/*! bulma.io v0.8.0 | MIT License | github.com/jgthms/bulma */
+/*! bulma.io v0.8.2 | MIT License | github.com/jgthms/bulma */
 @-webkit-keyframes spinAround {
   from {
     transform: rotate(0deg);
@@ -2916,11 +2916,11 @@ fieldset[disabled] .button {
 .buttons.has-addons .button:not(:last-child) {
   border-bottom-right-radius: 0;
   border-top-right-radius: 0;
-  margin-right: -1px;
+  margin-left: -1px;
 }
 
 .buttons.has-addons .button:last-child {
-  margin-right: 0;
+  margin-left: 0;
 }
 
 .buttons.has-addons .button:hover, .buttons.has-addons .button.is-hovered {
@@ -3828,6 +3828,11 @@ fieldset[disabled] .button {
   color: currentColor;
 }
 
+.table td.is-vcentered,
+.table th.is-vcentered {
+  vertical-align: middle;
+}
+
 .table th {
   color: #363636;
 }
@@ -3935,7 +3940,7 @@ fieldset[disabled] .button {
 }
 
 .tags .tag:not(:last-child) {
-  margin-right: 0.5rem;
+  margin-left: 0.5rem;
 }
 
 .tags:last-child {
@@ -3976,18 +3981,18 @@ fieldset[disabled] .button {
 }
 
 .tags.has-addons .tag {
-  margin-right: 0;
+  margin-left: 0;
 }
 
 .tags.has-addons .tag:not(:first-child) {
-  margin-left: 0;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
+  margin-right: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .tags.has-addons .tag:not(:last-child) {
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 .tag:not(body) {
@@ -4006,8 +4011,8 @@ fieldset[disabled] .button {
 }
 
 .tag:not(body) .delete {
-  margin-left: 0.25rem;
-  margin-right: -0.375rem;
+  margin-right: 0.25rem;
+  margin-left: -0.375rem;
 }
 
 .tag:not(body).is-white {
@@ -4103,22 +4108,22 @@ fieldset[disabled] .button {
 }
 
 .tag:not(body) .icon:first-child:not(:last-child) {
-  margin-left: -0.375em;
-  margin-right: 0.1875em;
+  margin-right: -0.375em;
+  margin-left: 0.1875em;
 }
 
 .tag:not(body) .icon:last-child:not(:first-child) {
-  margin-left: 0.1875em;
-  margin-right: -0.375em;
+  margin-right: 0.1875em;
+  margin-left: -0.375em;
 }
 
 .tag:not(body) .icon:first-child:last-child {
-  margin-left: -0.375em;
   margin-right: -0.375em;
+  margin-left: -0.375em;
 }
 
 .tag:not(body).is-delete {
-  margin-left: 1px;
+  margin-right: 1px;
   padding: 0;
   position: relative;
   width: 2em;
@@ -4319,23 +4324,23 @@ a.tag:hover {
   background-color: white;
   border-color: #dbdbdb;
   border-radius: 4px;
-  color: inherit;
+  color: #363636;
 }
 
 .input::-moz-placeholder, .textarea::-moz-placeholder, .select select::-moz-placeholder {
-  color: inherit;
+  color: rgba(54, 54, 54, 0.3);
 }
 
 .input::-webkit-input-placeholder, .textarea::-webkit-input-placeholder, .select select::-webkit-input-placeholder {
-  color: inherit;
+  color: rgba(54, 54, 54, 0.3);
 }
 
 .input:-moz-placeholder, .textarea:-moz-placeholder, .select select:-moz-placeholder {
-  color: inherit;
+  color: rgba(54, 54, 54, 0.3);
 }
 
 .input:-ms-input-placeholder, .textarea:-ms-input-placeholder, .select select:-ms-input-placeholder {
-  color: inherit;
+  color: rgba(54, 54, 54, 0.3);
 }
 
 .input:hover, .textarea:hover, .select select:hover, .is-hovered.input, .is-hovered.textarea, .select select.is-hovered {
@@ -4561,7 +4566,7 @@ fieldset[disabled] .radio {
 }
 
 .radio + .radio {
-  margin-left: 0.5em;
+  margin-right: 0.5em;
 }
 
 .select {
@@ -5249,7 +5254,7 @@ fieldset[disabled] .select select:hover {
   display: flex;
   height: 1em;
   justify-content: center;
-  margin-right: 0.5em;
+  margin-left: 0.5em;
   width: 1em;
 }
 
@@ -7230,13 +7235,13 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 }
 
 .navbar-link:not(.is-arrowless) {
-  padding-right: 2.5em;
+  padding-left: 2.5em;
 }
 
 .navbar-link:not(.is-arrowless)::after {
   border-color: #3273dc;
   margin-top: -0.375em;
-  right: 1.125em;
+  left: 1.125em;
 }
 
 .navbar-dropdown {
@@ -7355,9 +7360,6 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
     align-items: center;
     display: flex;
   }
-  .navbar-item {
-    display: flex;
-  }
   .navbar-item.has-dropdown {
     align-items: stretch;
   }
@@ -7400,7 +7402,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
     box-shadow: 0 8px 8px rgba(10, 10, 10, 0.1);
     display: none;
     font-size: 0.875rem;
-    left: 0;
+    right: 0;
     min-width: 100%;
     position: absolute;
     top: 100%;
@@ -7411,7 +7413,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
     white-space: nowrap;
   }
   .navbar-dropdown a.navbar-item {
-    padding-right: 3rem;
+    padding-left: 3rem;
   }
   .navbar-dropdown a.navbar-item:focus, .navbar-dropdown a.navbar-item:hover {
     background-color: whitesmoke;
@@ -8021,11 +8023,13 @@ label.panel-block:hover {
 }
 
 .tabs.is-toggle li:first-child a {
-  border-radius: 0 4px 4px 0;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .tabs.is-toggle li:last-child a {
-  border-radius: 4px 0 0 4px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 .tabs.is-toggle li.is-active a {
@@ -10822,7 +10826,7 @@ label.panel-block:hover {
     justify-content: center;
   }
   .hero-buttons .button:not(:last-child) {
-    margin-right: 1.5rem;
+    margin-left: 1.5rem;
   }
 }
 
