--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -125,14 +125,18 @@ $tabs-toggle-link-active-color: $link-invert !default
         +ltr-property("margin", -#{$tabs-toggle-link-border-width}, false)
       &:first-child a
         +ltr
-          border-radius: $tabs-toggle-link-radius 0 0 $tabs-toggle-link-radius
+          border-top-left-radius: $tabs-toggle-link-radius
+          border-bottom-left-radius: $tabs-toggle-link-radius
         +rtl
-          border-radius: 0 $tabs-toggle-link-radius $tabs-toggle-link-radius 0
+          border-top-right-radius: $tabs-toggle-link-radius
+          border-bottom-right-radius: $tabs-toggle-link-radius
       &:last-child a
         +ltr
-          border-radius: 0 $tabs-toggle-link-radius $tabs-toggle-link-radius 0
+          border-top-right-radius: $tabs-toggle-link-radius
+          border-bottom-right-radius: $tabs-toggle-link-radius
         +rtl
-          border-radius: $tabs-toggle-link-radius 0 0 $tabs-toggle-link-radius
+          border-top-left-radius: $tabs-toggle-link-radius
+          border-bottom-left-radius: $tabs-toggle-link-radius
       &.is-active
         a
           background-color: $tabs-toggle-link-active-background-color
