--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -292,9 +292,9 @@ $button-static-border-color: $border !default
       &:not(:last-child)
         border-bottom-right-radius: 0
         border-top-right-radius: 0
-        margin-right: -1px
+        +ltr-property("margin", -1px)
       &:last-child
-        margin-right: 0
+        +ltr-property("margin", 0)
       &:hover,
       &.is-hovered
         z-index: 2
