--- a/sass/form/file.sass
+++ b/sass/form/file.sass
@@ -174,7 +174,7 @@ $file-name-max-width: 16em !default
   display: flex
   height: 1em
   justify-content: center
-  margin-right: 0.5em
+  +ltr-property("margin", 0.5em)
   width: 1em
   .fa
     font-size: 14px
