Visual bug on button
There is a bug when a button is-outlined disabled is-loading and focus, you can't see the loading icon.

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -172,12 +172,13 @@ $button-static-border-color: $border !default
         &.is-loading
           &::after
             border-color: transparent transparent $color $color !important
-          &:hover,
-          &.is-hovered,
-          &:focus,
-          &.is-focused
-            &::after
-              border-color: transparent transparent $color-invert $color-invert !important
+          &:not([disabled])
+            &:hover,
+            &.is-hovered,
+            &:focus,
+            &.is-focused
+              &::after
+                border-color: transparent transparent $color-invert $color-invert !important
         &[disabled],
         fieldset[disabled] &
           background-color: transparent
